# crypto-hft

./: .dockerignore  .env  .flake8  .gitignore  CI_CD_GUIDE.md  DOCKER_DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.base  Dockerfile.streamlit  EVOP_FRAMEWORK_GUIDE.md  GNN_CLUSTERING_RESEARCH_GUIDE.md  KUBERNETES_HELM_GUIDE.md  LLM_ANALYST_GUIDE.md  MONITORING_SETUP.md  Makefile  ONCHAIN_DATA_GUIDE.md  README.md  README_DOCKER.md  REGIME_CLASSIFICATION_GUIDE.md  config.env.example  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.dev.example  env.prod.example  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml  feature-test.yml
backtester/: __init__.py  data_loader.py  engine.py  example.py  metrics.py  models.py  strategy_adapter.py
backtester/validation/: __init__.py  cpcv.py  example.py  orchestrator.py
common/: __init__.py  logger.py  metrics.py
common/db/: __init__.py  client.py  models.py
infrastructure/helm/: values-staging.yaml
k8s/production/: configmap.yaml  infrastructure.yaml  monitoring.yaml  namespace.yaml
k8s/staging/: configmap.yaml  namespace.yaml  secrets.yaml  services.yaml
monitoring/: prometheus.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
monitoring/streamlit/: pnl_app.py
research/gnn_clustering/: run_experiment.py
scripts/: deploy-k8s.sh  deploy.sh  docker-build.sh  health-check.sh  helm-deploy.sh  test-pipeline.sh
services/: __init__.py
services/execution/: Dockerfile  __init__.py  exchange.py  main.py  portfolio.py  regime_integration.py  risk.py  signals.py  state_machine.py
services/garch_model/: Dockerfile  __init__.py  main.py  model.py  thresholds.py
services/ingestion/: Dockerfile  __init__.py  config.py  kafka_producer.py  main.py  service_registry.py  websocket_client.py
services/kalman_filter/: Dockerfile  __init__.py  filter.py  main.py  state.py
services/llm_analyst/: __init__.py  main.py
services/onchain_data/: Dockerfile  main.py  models.py
services/orchestrator/: Dockerfile  __init__.py  main.py  (+3 more)
src/: __init__.py  config.py  kafka_producer.py  main.py  models.py  order_book_manager.py  websocket_client.py
tests/: conftest.py  test_config.py  test_edge_cases.py  test_integration.py  test_kafka_producer.py  test_main.py  test_models.py  test_order_book_manager.py  test_performance.py  test_websocket_client.py
(+82 files in other folders)
